--- a/src/sass/components/_repo-list.scss
+++ b/src/sass/components/_repo-list.scss
@@ -3,12 +3,12 @@
 .repo-list {
   margin: 0;
   padding: 0;
-  // margin-top: 2rem;
 
   &__item {
     font-size: fs(200);
     background-color: var(--stats-card-bg);
     padding: 1.5rem;
+    padding: 0.95rem;
 
     display: grid;
 
